# ROBIT_INTERN_QT_HW

./: README.md  gitignore.txt
Keyboard/: CMakeLists.txt
Keyboard/include/: keyboard.h
Keyboard/src/: keyboard.cpp
Keyboard/ui/: keyboard.ui
manisimulator/: CMakeLists.txt  manisimulator.cpp  manisimulator.h  manisimulator.ui
manisimulator/src/: main.cpp  manisimulator.cpp
texteditor/: CMakeLists.txt
texteditor/include/: texteditor.h
texteditor/resources/: test.txt
texteditor/src/: main.cpp  texteditor.cpp
texteditor/ui/: texteditor.ui
